--- a/style.css
+++ b/style.css
@@ -9,3 +9,34 @@ body, butto, input, select, textarea{
     font-size: 18px;
     line-height: 1.5;
 }
+
+h1, h2, h3, h4, h5, h6{
+    clear: both;
+}
+
+p{
+    margin-bottom: 1.5em;
+}
+b, strong{
+    font-weight: bold;
+}
+dfn, cite, em, i{
+    font-style: italic;
+}
+blockquote{
+    margin: 0 1.5em;
+}
+address{
+    margin: 0 0 1.5em;
+}
+pre{
+    background: #eee;
+    font-family: "Courier 10 pitch", Courier, monospace;
+    font-size: 15px;
+    font-size: 1.5rem;
+    line-height: 1.6;
+    margin-bottom: 1.6em;
+    max-width: 100%;
+    overflow: auto;
+    padding: 1.6em;
+}
